# Strut

./: .gitignore  AGENTS.md  COPYRIGHT.md  README.md  pyproject.toml  run_tests.py  unit_tests.py
benchmark/: .gitignore  README.md
benchmark/OpenSees/: README.md
benchmark/micro/: .gitignore  README.md  common.py  run_material_compare.py  run_section_micro.py
benchmark/perf/: opensees_example_rc_frame_earthquake.perf.json
docs/: .gitignore  ModularMojo.md  MojoGpuPuzzlesSolutions.md  OpenSees.md  PLAN.md  beam_column_parity_contract.md  benchmark-opensees-examples.md  fiber-section.md  harness.md  materials.md  packages.md  plan-plugins.md  simd.md  testing.md
scripts/: bench_fiber_section.py  build_megatall_smoke_case.py  build_mojo_solver.py  build_mojo_solver.sh  build_opensees_archlinux_init.sh  build_opensees_linux.sh  build_strut_solver.sh  check_mojo_warnings.py  compare_benchmarks.py  compare_case.py  direct_tcl_support.py  gen_frame_case.py  generate_references.sh  json_to_tcl.py  measure_megatall_resources.py  plot_benchmarks.py  plot_case_timeseries.py  plot_constants.py  plot_markdown_benchmarks.py  plot_material_curves.py  plot_materials.py  profile_hotspots.py  run_and_plot_case.py  run_benchmarks.py  run_case.py  run_case.sh  run_mojo_case.py  run_mojo_case_py.py  run_mojo_material_path.py  run_mojo_section_path.py  run_opensees.sh  run_opensees_wine.sh  run_openseesmp.sh  run_strut_case.py  run_strut_material_path.py  run_strut_section_path.py  run_tests.py  setup-opensees-docs.py  setup-opensees-docs.sh  setup.sh  (+2 more)
src/mojo/: elements.mojo  (+10 more)
(+274 files in other folders)
