[project]
name = "strut"
version = "0.1.0"
description = "GPU-first Mojo finite element analysis benchmarking sandbox"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mojo>=0.25.6.1",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "matplotlib>=3.10.8",
    "pytest-xdist>=3.8.0",
]
